Further optimize mobile footer and fix home page text alignment
Footer improvements:
- Reduce font size to 0.4rem (≤600px) and 0.35rem (≤480px)
- Minimize padding to 2px/1px for ultra-compact appearance
- Tighten line heights and separator margins

Home page text alignment:
- Adjust bio-content left padding from 2rem to 1.5rem
- Move bio-text slightly left with negative margin (-0.5rem)
- Improve text positioning on mobile devices

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -153,29 +153,29 @@ h3 { font-size: 1.5em; }
 
   // Make footer much smaller on mobile devices
   @media screen and (max-width: 600px) {
-    font-size: 0.5rem;
-    padding: 5px 0;
-    
-    .copyright-text {
-      line-height: 1.2;
-    }
-    
-    .footer-separator {
-      margin: 0 4px;
-    }
-  }
-  
-  // Even smaller for very small screens
-  @media screen and (max-width: 480px) {
-    font-size: 0.45rem;
-    padding: 3px 0;
+    font-size: 0.4rem;
+    padding: 2px 0;
     
     .copyright-text {
       line-height: 1.1;
     }
     
     .footer-separator {
-      margin: 0 3px;
+      margin: 0 2px;
+    }
+  }
+  
+  // Even smaller for very small screens
+  @media screen and (max-width: 480px) {
+    font-size: 0.35rem;
+    padding: 1px 0;
+    
+    .copyright-text {
+      line-height: 1.0;
+    }
+    
+    .footer-separator {
+      margin: 0 2px;
     }
   }
 }
@@ -537,7 +537,7 @@ body {
   .bio-content {
     flex-direction: column;
     text-align: center;
-    padding-left: 2rem;
+    padding-left: 1.5rem;
     padding-right: 2rem;
   }
   
@@ -560,6 +560,8 @@ body {
 
   .bio-text {
     text-align: left;
+    padding-left: 0;
+    margin-left: -0.5rem;
   }
 
   .research-interests, 
